...
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Movies"
        view.addSubview(tableView)
        tableView.layoutFullyInSuperView()
        tableView.dataSource = self
        tableView.delegate = self
        tableView.stateDelegate = self
        tableView.stateDataSource = stateController
...
