...
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Flicker Images"
        view.addSubview(collectionView)
        collectionView.layoutFullyInSuperView()
        if #available(iOS 11.0, *) {
            collectionView.contentInsetAdjustmentBehavior = .always
        }
        collectionView.allowsSelection = false
...
